deployment/stateful/expose-service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: web-1
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: web-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
