deployment/stateful/expose-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-0
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: web-0
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30088
